--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /myciactssTV/TeresaV/Domenici/world/target/
 /myciactssTV/TeresaV/Domenici/bkmapp/bkmapp/target/
+/myciactssTV/TeresaV/Guerrini/mavenproject2/target/
